# Arielo_MiniPc_OS

./: .gitignore  CHANGELOG.md  CHANGELOG_10AD.md  CHANGELOG_10AE.md  CHANGELOG_10AF.md  CHANGELOG_10AG.md  CHANGELOG_10AH.md  CHANGELOG_10AH_FIX1.md  CHANGELOG_10AH_FIX2.md  CHANGELOG_10AI.md  CHANGELOG_10AJ.md  CHANGELOG_10AK.md  CHANGELOG_10AL.md  CHANGELOG_10AL_FIX2.md  CHANGELOG_10AL_FIX3.md  CHANGELOG_10AM.md  CHANGELOG_10AN.md  CHANGELOG_10AN_FIX3.md  CHANGELOG_10AO.md  CHANGELOG_10AP.md  CHANGELOG_10AQ.md  LICENSE  README.md  README_10AB_TBROWSER_TEXT_VIEWER_SCROLL.txt  README_10AC_TBROWSER_LOCAL_LINKS_NAV.txt  README_10AD_TBROWSER_HEADER_BACK_HISTORY.txt  README_10AE_TBROWSER_BOOKMARKS_FAVORITES.txt  README_10AF_TBROWSER_GUI_VIEWER_FIRST.txt  README_10AG_HOME_WEB_BUTTON_LEXBOR_GUI.txt  README_10AH.md  README_10AI.md  README_10AJ.md  README_10AK.md  README_10AL.md  README_10AL_FIX2.md  README_10AL_FIX3.md  README_10AL_FIX4.md  README_10AM.md  README_10AN.md  README_10AN_FIX3.md  (+12 more)
apps/breakout/: README.md  breakout.c  breakout.elf  breakout.xtensa.elf  buildelf.bat  buildelf.sh  main.c
apps/calculator/: README.md  SO_BASE_EXPORT_MOUSE_TOUCH_PATCH.txt  buildelf.bat  buildelf.sh  calculator.c  calculator.elf  calculator.xtensa.elf
apps/image_viewer/: README.md  buildelf.bat  buildelf.sh  image_viewer.c  image_viewer.elf  image_viewer.xtensa.elf
apps/log_viewer/: README.md  buildelf.bat  buildelf.sh  log_viewer.c  log_viewer.elf  log_viewer.xtensa.elf
apps/mini_paint/: README.md  buildelf.bat  buildelf.sh  mini_paint.c  mini_paint.elf  mini_paint.xtensa.elf
apps/notepad_01a/: CHECKS_NOTEPAD_01H_FIX1.txt  CHECKS_NOTEPAD_01J.txt  CHECKS_NOTEPAD_01K.txt  README.md  buildelf.bat  buildelf.sh  notepad.c  notepad.elf  notepad.xtensa.elf
apps/pong/: buildelf.bat  pong.c  pong.elf  pong.xtensa.elf  snake.c
components/lexbor_full/: CMakeLists.txt
components/lexbor_full/source/lexbor/dom/interfaces/: document.c
main/: CMakeLists.txt  README_10BE_SOLO_FICHERO_UTF8_ACCENTS.md  cmd_desktop_07A_GUI_SHELL.bak  cmd_desktop_07A_GUI_SHELL.c  cmd_tbbrowser_gui_10ah.c  cmd_tbbrowser_lexbor_10ac.c  cmd_tbbrowser_lexbor_10ad.c  cmd_tbbrowser_lexbor_10ae.c  cmd_tbrender_lexbor_10aa.c  cmd_tbtest_lexbor_source.c  cmd_tbview_lexbor_10ab.c  idf_component.yml  main.c  minipc_bootgfx_03b.c  minipc_bootgfx_03b.h  minipc_bootgfx_03c_logo_pro.c  minipc_bootgfx_03c_logo_pro.h  minipc_bootpixel_03d.c  minipc_bootpixel_03d.h  minipc_browser.c  minipc_browser.h  minipc_browser_10E_DIAG.c  minipc_console_02c.c  minipc_console_02c.h  minipc_i2cscan.c  minipc_i2cscan.h  minipc_ntp.c  minipc_ntp.h  minipc_sd_02b.c  minipc_sd_02b.h  minipc_splash_03a.c  minipc_splash_03a.h  minipc_splash_03a_fix2.c  minipc_splash_03a_fix2.h  minipc_touch_gt911.c  minipc_touch_gt911.h  minipc_usb_msc_02d.c  minipc_usb_msc_02d.h  minipc_usbsel_02d.c  minipc_usbsel_02d.h  (+7 more)
test_pages/: test_10ad_index.html  test_10ad_page2.html  test_10ae_index.html  test_10ae_page2.html
(+44 files in other folders)
